<resources>
    <string name="app_name">Jamb</string>
    <string name="lock_unlock_message">Click on dice to lock/unlock a dice</string>
    <string name="check_jamb">Check Jamb</string>
    <string name="check_poker">Check Poker</string>
    <string name="check_straight">Check Straight</string>
    <string name="play_jamb">Play Jamb</string>
    <string name="back">Back</string>
    <string name="roll_a_dice">Roll a dice</string>
    <string name="dice_image">Dice image</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="both">Both</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="sum">Sum</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="difference">Max-Min * num of 1</string>
    <string name="straight">Straight</string>
    <string name="full">Full</string>
    <string name="poker">Poker</string>
    <string name="total">Total</string>
    <string name="checkSheet">Check sheet</string>
    <string name="number_of_throws">Current number of throws: %d</string>
    <string name="roll_dices">Roll all dices to start game</string>
    <string name="max_num_of_throws">Maximum number of throws: 3. Please enter the result on the sheet!</string>
    <string name="condition_true">It\'s a %s!</string>
    <string name="condition_false">It\'s not a %s</string>
    <string name="lock_message">Dice %s is locked.</string>
    <string name="unlock_message">Dice %s is unlocked.</string>
    <string name="enter_value_question">Do you want to enter this value?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="throw_dices_before_insert">Throw dices before inserting a new value!</string>
    <string name="required_listener">Implement %s before using this fragment!</string>
</resources>
