<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="35sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivDice1"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:contentDescription="@string/dice_image"
                android:src="@drawable/dice_1"
                android:tag="1" />

            <ImageView
                android:id="@+id/ivDice2"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/dice_image"
                android:src="@drawable/dice_2"
                android:tag="2" />

            <ImageView
                android:id="@+id/ivDice3"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/dice_image"
                android:src="@drawable/dice_3"
                android:tag="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivDice4"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:contentDescription="@string/dice_image"
                android:src="@drawable/dice_4"
                android:tag="4" />

            <ImageView
                android:id="@+id/ivDice5"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/dice_image"
                android:src="@drawable/dice_5"
                android:tag="5" />

            <ImageView
                android:id="@+id/ivDice6"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/dice_image"
                android:src="@drawable/dice_6"
                android:tag="6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/lock_unlock_message" />

            <TextView
                android:id="@+id/tvNumOfThrows"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/number_of_throws" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnIsJamb"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/check_jamb"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnIsPoker"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/check_poker"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnIsStraight"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/check_straight"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRollADice"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/roll_a_dice" />

            <Button
                android:id="@+id/btnGoToSheet"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginStart="6dp"
                android:gravity="center"
                android:text="@string/checkSheet" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>